--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -126,6 +126,10 @@ config CONSOLE_TRUETYPE_SIZE
 	  method to select the display's physical size, which would allow
 	  U-Boot to calculate the correct font size.
 
+config VIDEO_FONT_TERMINUS
+	bool "Use Terminus 8x16 fixed width font"
+	default n
+
 config SYS_WHITE_ON_BLACK
 	bool "Display console as white on a black background"
 	default y if ARCH_AT91 || ARCH_EXYNOS || ARCH_ROCKCHIP || ARCH_TEGRA || X86 || ARCH_SUNXI
